[package]
name = "git-codeowners"
version = "0.1.2"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust cli for working with Github CODEOWNERS files"
readme = "README.md"
homepage = "https://github.com/softprops/git-codeowners"
documentation = "https://softprops.github.io/git-codeowners"
repository = "https://github.com/softprops/git-codeowners"
license = "MIT"
keywords = ["github", "owners"]

edition = "2018"

[dependencies]
codeowners = "0.1.3"
clap = "2.27"
# strip ssh, https support from git2
git2 = { version = "0.11", default-features = false }
